<resources>
    <string name="app_name">Quizer</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="example_email">example@mail.com</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login_here">Already have an account?\nLogin here</string>
    <string name="registration_prompt">New user registration</string>
    <string name="login_prompt">Account login</string>
    <string name="register_here">Don\'t have an account?\nRegister here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password_prompt">Please, enter your E-mail address</string>
    <string name="reset_password">Reset password</string>
    <string name="home_screen_all_courses">ALL COURSES</string>
    <string name="home_screen_my_courses">MY COURSES</string>
    <string name="home_screen_account">MY ACCOUNT</string>
    <string name="home_screen_sign_out">SIGN OUT</string>
    <string name="home_screen_tests_to_do">TESTS TO FINISH</string>
    <string name="home_screen_results">RESULTS</string>
    <string name="home_screen_create_course">CREATE COURSE</string>
    <string name="home_screen_create_test">CREATE TEST</string>
    <string name="account_name">Name</string>
    <string name="account_teacher">Teacher</string>
    <string name="account_student">Student</string>
    <string name="account_user_type">User type</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="create_course_hint">Course name</string>
    <string name="create_course_prompt">Write the name of the new course here</string>
    <string name="create_test_name_prompt">Write name for the new test</string>
    <string name="create_test_date_prompt">Write deadline for the new test</string>
    <string name="create_test_name_hint">Test name</string>
    <string name="create_name_date_hint">yyyy-MM-dd</string>
    <string name="create_test_question_hint">Question text</string>
    <string name="create_test_add_answers">Add answers</string>
    <string name="create_test_answer1">Answer 1</string>
    <string name="create_test_answer2">Answer 2</string>
    <string name="create_test_answer3">Answer 3</string>
    <string name="create_test_answer4">Answer 4</string>
    <string name="correct">Correct</string>
    <string name="create_test">Create test</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="answer_hint">Write answer here</string>
    <string name="create_test_num_of_questions">Write number of questions</string>
    <string name="course_name">Course name</string>
    <string name="teacher_name">Teacher name</string>
    <string name="description">Description</string>
    <string name="begin_test">Begin test</string>
    <string name="solve_test_number_of_questions">Number of questions in this test</string>
    <string name="solve_test_deadline">Deadline for this test</string>
    <string name="save">Save</string>
    <string name="test_summary_score_prompt">Your Score:</string>
    <string name="finish">finish</string>
    <string name="add_test_menu_item">Add test</string>
    <string name="edit_course_menu_item">Edit course</string>
    <string name="delete_course_menu_item">Delete course</string>
    <string name="show_result_test_name">Test name</string>
    <string name="show_result_course_name">Course name</string>
    <string name="show_result_score">Score</string>
    <string name="add_course_description_prompt">Add description for this course</string>
    <string name="edit_course_name">Edit course name</string>
    <string name="edit_course_description">Edit course description</string>
    <string name="forgot_password_email_pending">Email pending…</string>
    <string name="forgot_password_cancelled">Cancelled password reset</string>
    <string name="sign_in_failed">Authorization failed</string>
    <string name="sign_in_user_not_exist">User does not exist</string>
    <string name="sign_up_already_registered">User already registered</string>
    <string name="sign_up_failed">Failed to create new account</string>
    <string name="edit_course_success">Successfully edited course</string>
    <string name="edit_course_cancel">Cancelled editing course</string>
    <string name="edit_course_failed">Failed to edit course</string>
    <string name="update_account_success">Account information updated</string>
    <string name="create_course_success">New course created</string>
    <string name="create_course_failed">Failed to create new course</string>
</resources>
