<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_test_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="TextView"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/solve_test_number_of_questions"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_test_name"
        app:layout_constraintStart_toStartOf="@+id/text_view_test_name"
        app:layout_constraintTop_toBottomOf="@+id/text_view_test_name" />

    <TextView
        android:id="@+id/text_view_num_of_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/solve_test_deadline"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_num_of_questions"
        app:layout_constraintStart_toStartOf="@+id/text_view_num_of_questions"
        app:layout_constraintTop_toBottomOf="@+id/text_view_num_of_questions" />

    <TextView
        android:id="@+id/text_view_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/button_begin_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/begin_test"
        app:layout_constraintEnd_toEndOf="@+id/text_view_deadline"
        app:layout_constraintStart_toStartOf="@+id/text_view_deadline"
        app:layout_constraintTop_toBottomOf="@+id/text_view_deadline" />
</androidx.constraintlayout.widget.ConstraintLayout>